force-app/main/default/objects/HRCSVC21_Case_Local_Country_Contact_Info__mdt/HRCSVC21_Case_Local_Country_Contact_Info__mdt.object-meta.xml
<CustomObject>
    <description>Used in #SE-1190 to send notifications to customers in native language</description>
    <label>HRCSVC Case Local Country Contact Info</label>
    <pluralLabel>HRCSVC Case Local Country Contact Infos</pluralLabel>
</CustomObject>