force-app/main/default/objects/HRCSVC21_Case_Local_Country_Contact_Info__mdt/fields/HRCSVC21_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Contact_Information__c</fullName>
    <label>Contact Information</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>