force-app/main/default/objects/HRCSVC21_Case_Local_Country_Contact_Info__mdt/fields/HRCSVC21_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Country_Code__c</fullName>
    <label>Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>