force-app/main/default/objects/HRCSVC21_Case_Local_Country_Contact_Info__mdt/fields/HRCSVC21_Language__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Language__c</fullName>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>en_US</label>
            </value>
            <value>
                <fullName>en_GB</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>sv</fullName>
            </value>
            <value>
                <fullName>nl_NL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>