force-app/main/default/objects/HRCSVC21_Case_Local_Country_Contact_Info__mdt/fields/HRCSVC21_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creation</fullName>
                <default>true</default>
                <label>Creation</label>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>