force-app/main/default/objects/HRCSVC21_Case_Local_Country_Contact_Info__mdt/listViews/All_Care_Comm_Records_Closure.listView-meta.xml
<ListView>
    <fullName>All_Care_Comm_Records_Closure</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>HRCSVC21_Country__c</columns>
    <columns>HRCSVC21_Country_Code__c</columns>
    <columns>HRCSVC21_Language__c</columns>
    <columns>HRCSVC21_Protocol_Category__c</columns>
    <columns>HRCSVC21_Type__c</columns>
    <columns>HRCSVC21_Contact_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HRCSVC21_Protocol_Category__c</field>
        <operation>equals</operation>
        <value>Care Comm</value>
    </filters>
    <filters>
        <field>HRCSVC21_Type__c</field>
        <operation>equals</operation>
        <value>Closure</value>
    </filters>
    <label>All Care Comm Records: Closure</label>
    <language>en_US</language>
</ListView>