force-app/main/default/objects/HRCSVC21_Case_Local_Country_Contact_Info__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>HRCSVC21_Country_Code__c</columns>
    <columns>HRCSVC21_Language__c</columns>
    <columns>HRCSVC21_Protocol_Category__c</columns>
    <columns>HRCSVC21_Type__c</columns>
    <columns>HRCSVC21_Contact_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>